# cppMilTech

./: CMakePresets.json
homework_04/data/: custom.txt
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt  README.md
homework_05/include/: telemetry.hpp
homework_05/src/: main.cpp  telemetry.cpp
